[project]
name = "airline-booking-analyzer"
version = "0.1.0"
description = "Airline Booking Market Demand Analysis Web App"
authors = ["Your Name <you@example.com>"]
requires-python = ">=3.11"
dependencies = [
    "flask>=2.3.0",
    "requests>=2.31.0",
    "pandas>=2.0.0",
    "matplotlib>=3.7.0",
    "seaborn>=0.12.0"
]
